--- a/style.css
+++ b/style.css
@@ -236,10 +236,11 @@ main {
     max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 3rem;
+    /* padding-bottom: 3rem; */
     position: relative;
     padding-left: 2.5rem;
     padding-right: 2rem;
+    height: 0;
   }
 
   nav {
@@ -268,13 +269,13 @@ main {
 /* Image/video containers */
 img.project {
   max-height: 40vw;
-  max-width: 1225px;
+  max-width: 100%;
   display: block;
   margin: auto;
 }
 
 div.image-gallery {
-  max-width: 1225px;
+  max-width: 100%;
 }
 
 div.dion-walking {
@@ -297,12 +298,10 @@ img.full-content {
 }
 
   img.welcome {
-    left: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
-    max-width: 100vw;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
     position: relative;
-    right: 50%;
   }
 
   img.more {
@@ -552,7 +551,7 @@ div.welcome-box2 {
         max-width: 1350px;
         margin-left: auto;
         margin-right: auto;
-        padding-bottom: 3rem;
+        /* padding-bottom: 3rem; */
         position: relative;
       
     }
@@ -702,7 +701,7 @@ div.welcome-box2 {
     header {
       margin-left: 0;
       margin-right: 1.5rem;
-      padding-bottom: 0;
+      /* padding-bottom: 0; */
       position: relative;
       overflow: hidden;
       box-sizing: border-box; Ensure padding is included in the width
