--- a/style.css
+++ b/style.css
@@ -243,6 +243,23 @@ main {
     height: 0;
   }
 
+  .header-index {
+    /* max-width: 1605px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 3rem;
+    position: relative; */
+
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 10rem;
+    position: relative;
+    padding-left: 2.5rem;
+    padding-right: 2rem;
+    height: 0;
+  }
+
   nav {
     padding-left: 12rem;
     padding-top: 2rem;
