Lorebot page overhaul - trying to open up the interview insights section to be more legible

--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ table {
     font-size: 40px;
     color: #5CBBFF;
     line-height: 110%;
+    display: inline;
   }
 
   h2 {
@@ -162,7 +163,7 @@ table {
     font-family: "offbit", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 50px;
+    font-size: 40px;
     color: #5CBBFF;
     line-height: 110%;
   }
@@ -173,7 +174,7 @@ table {
     font-style: normal;
     font-size: 70px;
     color: #5CBBFF;
-    line-height: 90%;
+    line-height: 100%;
   }
 
   body {
@@ -208,6 +209,8 @@ table {
       display: inline;
       min-height: 100vh;
     }
+
+    
 /* end of type-specific styles. */
 
 
@@ -432,6 +435,9 @@ div.welcome-box2 {
 
   div.smallbr {
     height: 1rem;
+  }
+  div.tinybr {
+    height: .5rem;
   }
 
   div.specialbr {
