--- a/style.css
+++ b/style.css
@@ -50,16 +50,11 @@ table {
 /* My code starts here!!! */
 
 
-.browser-mockup {
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
-  background: white;
-}
+
 
 .browser-bar {
   background: #eee;
-  padding: 8px 16px;
+  padding: 2px 16px;
   font-family: sans-serif;
   font-size: 13px;
   display: flex;
@@ -92,42 +87,48 @@ table {
 .mockup-wrapper {
   background-color: #5CBBFF;
   display: flex;
-  align-items: center;     /* vertical centering */
-  justify-content: center; /* horizontal centering */
-  height: 740px;           /* 💡 Set fixed height here */
-  border-radius: 0;
-  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+  height: auto;
+  border-radius: 5px;
+  position: relative;
+  width: 100%;
+  padding: 2rem;
+  box-sizing: border-box;
 }
 
 .browser-mockup {
-  margin-top: 105px;
-  transform: scale(0.85);
-  transform-origin: top center;
-  border-radius: 12px;
+  border-radius: 5px;
   overflow: hidden;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+  background: white;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.browser-mockup video {
+  width: 100%;
+  height: calc(100% - 40px);
+  object-fit: cover;
 }
 
 
 /* Start of type-specific styles */
 
   a:link {
-      color: #B9E2FF;
+      color: #969696;
       text-decoration: none;
       text-decoration: none;
-      -webkit-transition: all .15s ease;
-      -moz-transition: all .15s ease;
-      -o-transition: all .15s ease;
-      transition: all .15s ease; 
-      letter-spacing:   -1px;
+    
+      /* letter-spacing:   -1px; */
     }
 
     a:visited {
-      color: #B9E2FF;
+      color: #969696;
     }
 
     a:hover {
-      color: #FF51CC;
+      color: #37ABFF;
       /* text-decoration: underline; */
       text-decoration-color: #FF51CC;
       letter-spacing:  normal;
@@ -182,26 +183,26 @@ table {
     font-family: "offbit", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 40px;
-    color: #5CBBFF;
-    line-height: 110%;
+    font-size: 25px;
+    line-height: 80%;
     display: inline;
   }
 
   h2 {
-    font-family: "ppmori-bold", sans-serif;
+    font-family: "ppmori-semibold", sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 25px;
     display: inline;
-    line-height: 150%;
+    line-height: 130%;
+    color: #303030;
   }
 
   h3 {
     font-family: "ppmori-regular", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 14px;
+    font-size: 16px;
     display: block;
     line-height: 140%;
   }
@@ -240,10 +241,25 @@ table {
       font-weight: 400;
       font-style: normal;
       font-size: 18px;
-      color: black;
-      line-height: 125%;
+      color: #303030;
+      line-height: 150%;
       display: inline;
       min-height: 100vh;
+    }
+
+    button {
+      font-family: "ppmori-regular", sans-serif;
+      font-weight: 400;
+      font-style: normal;
+      font-size: 18px;
+      line-height: 125%;
+      display: inline;
+      border: none;
+      background: none;
+      padding: 0;
+      margin: 0;
+      cursor: pointer;
+      outline: none;
     }
 
     bold-body {
@@ -251,10 +267,7 @@ table {
     font-weight: 800;
     font-style: bold;
     font-size: 18px;
-    color: black;
-    line-height: 125%;
     display: inline;
-    min-height: 100vh;
     }
 
     bold-h4 {
@@ -274,18 +287,26 @@ table {
 
 /* universal containers */
 main {
-    backdrop-filter: blur(2.5px);
     margin-top: 0rem;
     margin-bottom: 3rem;
     position: relative;
-    z-index: 2;
-    max-width: 1200px;
+    max-width: 2000px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 10rem;
+    padding-left: 10rem;
+  }
+
+.intro {
+    margin-top: 0rem;
+    margin-bottom: 1rem;
+    position: relative;
+    max-width: calc(2000px - 2rem);
     margin-left: auto;
     margin-right: auto;
     padding-right: 11rem;
     padding-left: 11rem;
   }
- 
 
   header {
     /* max-width: 1605px;
@@ -294,47 +315,93 @@ main {
     padding-bottom: 3rem;
     position: relative; */
 
-    max-width: 1600px;
+    max-width: 2000px;
     margin-left: auto;
     margin-right: auto;
     /* padding-bottom: 3rem; */
     position: relative;
-    padding-left: 2.5rem;
-    padding-right: 2rem;
     height: 0;
   }
 
-  .header-index {
-    /* max-width: 1605px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-bottom: 3rem;
-    position: relative; */
 
-    max-width: 1600px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-bottom: 10rem;
-    position: relative;
-    padding-left: 2.5rem;
-    padding-right: 2rem;
-    height: 0;
-  }
-
-  nav {
-    padding-left: 12rem;
-    padding-top: 2rem;
-    max-width: 70%;
+  .nav-outer {
+    width: 100%;
+    background-color: white;
+    border-bottom: 2px solid #F0F0F0;
     position: fixed;
-    z-index: ;
+    z-index: 1;
+    left: 0;
+    right: 0;
+    padding: 0.8rem 0;
   }
 
-  nav_project {
-    padding-top: 2rem;
-    max-width: 100%;
+  .nav-inner {
+    padding-left:11rem;
+    padding-right:11rem;
+    max-width: calc(2000px - 2rem);
+    margin-left: auto;
+    margin-right: auto;
     
-    position: fixed;
-    z-index: 3;
+  }
+
+  .nav-buttons {
+    display: flex;
+    align-items: center;
+    gap: .8rem;
+  }
+
+  .nav-button {
+    text-decoration: none;
+    display: flex; 
+    align-items: center;
+    padding-top: .6rem;
+    padding-bottom: .4rem;
+    border-radius: 5px;
+    padding-left: .75rem;
+    padding-right: .75rem;
+    background-color: #F0F0F0;
+  }
+
+  .project-buttons {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+  }
+
+  .project-buttons a:hover {
+    color: #37ABFF;
+  }
+  
+
+
+  .special-buttons {
+    display: flex;
+    align-items: center;
+    gap: .8rem;
+    padding-right: .8rem;
+    border-right: 1px solid #E0E0E0;
+    margin-right: .8rem;
+  }
+
+  .nav-button,
+  .nav-button h1,
+  .nav-button button {
+    color: #969696;
+  }
+
+  .nav-button:hover,
+  .nav-button:hover h1,
+  .nav-button:hover * {
+    background-color: #37ABFF;
+    color: white;
+    
+  }
+
+  .nav-button.active,
+  .nav-button.active h1,
+  .nav-button.active * {
+    background-color: #37ABFF;
+    color: white;
   }
 
   footer {
@@ -345,11 +412,26 @@ main {
 
 
 /* Image/video containers */
+
+a.gallery-anchor {
+  padding: 1rem;
+  display: block;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+a.gallery-anchor:hover {
+  background-color: #F0F0F0;
+}
+  
+
 img.project {
   max-height: 40vw;
   max-width: 100%;
   display: block;
   margin: auto;
+  border-radius: 5px;
+  
 }
 
 div.image-gallery {
@@ -363,11 +445,14 @@ div.dion-walking {
   text-align: center;
 }
 
-img.smol {
-  max-width: 100px;
+.smol {
+  max-width: 75px;
   height: auto;
   display: block;
-  margin: auto;
+  margin: 0;
+  margin-bottom: 0;
+  margin-left: auto;
+  margin-right: 6rem;
 }
 
 img.full-content {
@@ -454,18 +539,33 @@ div.welcome-container {
   display: flex;
   justify-content: space-between; /* Distributes space between flex items */
   box-sizing: border-box;
+  gap: 2rem;
 }
 
 div.welcome-box1 {
   flex: 2; 
   max-width: 50%;
-  padding-right: 5rem;
 }
 
 div.welcome-box2 {
   flex: 2; /* Each box will grow equally to fill available space */
   max-width: 50%;
-  margin-right: 4rem;
+}
+
+div.project-container {
+  display: flex;
+  box-sizing: border-box;
+
+}
+
+div.project-box1 {
+  flex: 2; 
+  max-width: 50%;
+}
+
+div.project-box2 {
+  flex: 2; /* Each box will grow equally to fill available space */
+  max-width: 50%;
 }
 
 .quick-facts_outer-container {
@@ -515,164 +615,7 @@ div.welcome-box2 {
  
   /* laptop adjustments */
 
-  @media screen and (max-width:1700px) {
   
-    h1 {
-      font-weight: 400;
-      font-style: normal;
-      font-size: 40px;
-      color: #5CBBFF;
-      line-height: 110%;
-    }
-
-    nav {
-      padding-left: 10rem;
-      padding-top: 2rem;
-  
-      max-width: 80%;
-      position: fixed;
-      z-index: ;
-  
-  
-    }
-    
-    
-    
-    h3 {
-      font-family: "ppmori-regular", sans-serif;
-      font-weight: 400;
-      font-style: normal;
-      font-size: 14px;
-      /* display: inline; */
-    }
-
-
-    h8 {
-      font-size: 25px;
-    }
-
-    h7 {
-      font-size: 65px;
-    }
-
-    div.welcome-box1 {
-      flex: 5; /* Each box will grow equally to fill available space */
-      max-width: 50%;
-      padding-right: 1rem;
-    }
-    div.welcome-box2 {
-      flex: 5; /* Each box will grow equally to fill available space */
-      max-width: 50%;
-      margin-right: 0;
-
-
-    }
-
-    div.welcome-boxa1 {
-      flex: 5; /* Each box will grow equally to fill available space */
-      max-width: 50%;
-      padding-right: 3rem;
-    }
-    div.welcome-boxa2 {
-      flex: 5; /* Each box will grow equally to fill available space */
-      max-width: 50%;
-      margin-right: 4rem;
-    
-
-    }
-
-    main {
-      padding-right: 11rem;
-      padding-left: 11rem;
-      backdrop-filter: blur(2.5px);
-      margin-top: 0rem;
-      margin-bottom: 3rem;
-      position: relative;
-      z-index: 2;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-   
-  
-  }
-
-  @media screen and (max-width:1500px) {
-  
-    h1 {
-      font-family: "offbit", sans-serif;
-      font-weight: 400;
-      font-style: normal;
-      font-size: 40px;
-      color: #5CBBFF;
-      line-height: 110%;
-    }
-
-    nav {
-      padding-left: 9rem;
-      padding-top: 2rem;
-  
-      max-width: 72%;
-      position: fixed;
-      z-index: ;
-    }
-    h3 {
-      font-family: "ppmori-regular", sans-serif;
-      font-weight: 400;
-      font-style: normal;
-      font-size: 14px;
-      /* display: inline; */
-    }
-
-
-    main {
-    }
-
-    header {
-        max-width: 1350px;
-        margin-left: auto;
-        margin-right: auto;
-        /* padding-bottom: 3rem; */
-        position: relative;
-      
-    }
-
-    h8 {
-      font-size: 23px;
-    }
-    
-    h7 {
-      font-size: 60px;
-    }
-
-    div.welcome-box2 {
-      flex: 5; /* Each box will grow equally to fill available space */
-      max-width: 55%;
-    }
-
-  
-  }
-
-  @media screen and (max-width:1300px) {
-  
-    h1 {
-      font-family: "offbit", sans-serif;
-      font-weight: 400;
-      font-style: normal;
-      font-size: 40px;
-      color: #5CBBFF;
-      line-height: 110%;
-    }
-
-    nav {
-      position: fixed;
-  
-    }
-
-   
-
-  
-  }
 
 /* MOBILE ADJUSTMENTS START HERE: */
   @media screen and (max-width: 600px) {
@@ -971,3 +914,43 @@ div.welcome-box2 {
   
   
   }
+
+.text-break {
+  display: block;
+  height: 0.75rem;
+}
+
+.secondary-text {
+  color: #969696;
+}
+
+.secondary-text a {
+  color: #37ABFF;
+}
+
+.secondary-text a:hover {
+  color: #37ABFF;
+  text-decoration: underline;
+}
+
+.secondary-text a:visited {
+  color: #37ABFF;
+}
+
+hr {
+  border: none;
+  border-top: 2px solid #F0F0F0;
+  margin: 0;
+}
+
+.image-gallery {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  width: 100%;
+}
+
+a:hover h2 {
+  color: #37ABFF;
+}
+
+
