--- a/style.css
+++ b/style.css
@@ -483,6 +483,7 @@ img.full-content {
     display: block;
     max-width: 100%;
     height: auto;
+    border-radius: 5px;
   }
 
   /* .inner-box img {
