--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ table {
     font-family: "ppmori-semibold", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 25px;
+    font-size: 23px;
     display: inline;
     line-height: 130%;
     color: #303030;
@@ -212,10 +212,10 @@ table {
     font-family: "ppmori-regular", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 25px;
-    line-height: 125%;
+    font-size: 23px;
     display: inline;
-    min-height: 100vh;
+    line-height: 140%;
+    color: #303030;
   }
 
   h5 {
@@ -290,12 +290,24 @@ main {
     margin-top: 0rem;
     margin-bottom: 3rem;
     position: relative;
+    max-width: calc(2000px - 2rem);
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 11rem;
+    padding-left: 11rem;
+  }
+
+.index-main {
+    margin-top: 0rem;
+    margin-bottom: 3rem;
+    position: relative;
     max-width: 2000px;
     margin-left: auto;
     margin-right: auto;
     padding-right: 10rem;
     padding-left: 10rem;
   }
+
 
 .intro {
     margin-top: 0rem;
@@ -484,6 +496,7 @@ img.full-content {
   .youtube-video {
     aspect-ratio: 16/9;
     width: 100%;
+    border-radius: 8px;
   }
 
   video {
