--- a/style.css
+++ b/style.css
@@ -146,38 +146,52 @@ table {
     @font-face {
       font-family: "offbit";
       src: url("fonts/OffBit-101Bold.woff2") format('woff2');
-      font-weight: bold;
+      font-weight: 700;
+      font-style: normal;
+      font-display: swap;
     }
 
     @font-face {
       font-family: "offdot";
       src: url("fonts/OffBit-DotBold.woff2") format('woff2');
-      font-weight: bold;
-    }
-    
-    @font-face {
-      font-family: "offdot";
-      src: url("fonts/OffBit-DotBold.woff2") format('woff2');
-      font-weight: bold;
+      font-weight: 700;
+      font-style: normal;
+      font-display: swap;
     }
     
     @font-face {
       font-family: 'ppmori-regular';
       src: url('fonts/PPMori-Regular.woff2') format('woff2');
-      font-weight: 100;
+      font-weight: 400;
+      font-style: normal;
+      font-display: swap;
   }
 
   @font-face {
     font-family: 'ppmori-regular-italic';
     src: url('fonts/PPMori-RegularItalic.woff2') format('woff2');
-    font-weight: 100;
+    font-weight: 400;
+    font-style: italic;
+    font-display: swap;
   }
 
   @font-face {
     font-family: 'ppmori-bold';
     src: url('fonts/PPMori-Bold.woff2') format('woff2');
-    font-weight: 100;
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
   }
+
+  @font-face {
+    font-family: 'ppmori-semibold';
+    src: url('fonts/PPMori-Bold.woff2') format('woff2');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+  }
+
+
 
   h1 {
     font-family: "offbit", sans-serif;
@@ -202,7 +216,7 @@ table {
     font-family: "ppmori-regular", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 16px;
+    font-size: 18px;
     display: block;
     line-height: 140%;
   }
@@ -246,7 +260,7 @@ table {
     font-weight: 400;
     font-style: normal;
     font-size: 70px;
-    color: #5CBBFF;
+    color: #303030;
     line-height: 100%;
   }
 
@@ -460,10 +474,9 @@ a.gallery-anchor:hover h3 {
   
 
 img.project {
-  max-height: 40vw;
-  max-width: 100%;
+  width: 100%;
+  height: auto;
   display: block;
-  margin: auto;
   border-radius: 5px;
   
 }
@@ -611,7 +624,7 @@ div.project-box2 {
 }
 .quick-facts_container {
   flex: 1;
-  max-width: 33%;
+  width: 50%;
   text-align: left;
   /* border: 1px solid #000; */
 }
@@ -696,8 +709,8 @@ div.project-box2 {
   }
 
   h3 {
-    font-family: "ppmori-regular", sans-serif;
-    font-weight: 400;
+    font-family: "ppmori-semibold", sans-serif;
+    font-weight: 800;
     font-style: normal;
     font-size: 14px;
     /* display: inline; */
