--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ table {
     font-family: "ppmori-regular", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 18px;
+    font-size: 15px;
     display: block;
     line-height: 140%;
   }
@@ -409,6 +409,10 @@ main {
   }
 
   .project-buttons a:hover {
+    color: #37ABFF;
+  }
+
+  .project-buttons a.active {
     color: #37ABFF;
   }
   
