--- a/style.css
+++ b/style.css
@@ -341,11 +341,10 @@ main {
     margin-top: 0rem;
     margin-bottom: 1rem;
     position: relative;
-    max-width: calc(2000px - 2rem);
+    max-width: 45rem;
     margin-left: auto;
     margin-right: auto;
-    padding-right: 11rem;
-    padding-left: 11rem;
+
   }
 
   header {
@@ -1187,10 +1186,7 @@ a:hover h2{
     margin-right: 10rem;
   }
 
-  .intro {
-    padding-right: 11rem;
-    padding-left: 11rem;
-  }
+
 }
 
 
