--- a/style.css
+++ b/style.css
@@ -481,9 +481,15 @@ img.project {
   height: auto;
   display: block;
   border-radius: 5px;
-  
 }
 
+img.emote {
+  max-width: 10rem;
+  height: auto;
+  height: auto;
+  display: block;
+  margin: auto;
+}
 div.image-gallery {
   max-width: 100%;
 }
