--- a/style.css
+++ b/style.css
@@ -197,8 +197,9 @@ table {
     font-family: "offbit", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 25px;
-    line-height: 80%;
+    font-size: 32px;
+    line-height: 115%;
+    color: #363636;
     display: inline;
   }
 
@@ -476,6 +477,9 @@ a.gallery-anchor:hover h3 {
   color: #37ABFF;
 }
   
+a.gallery-anchor:hover h1 {
+  color: #37ABFF;
+}
 
 img.project {
   width: 100%;
