adjusting index-main margin properties for large screen

--- a/style.css
+++ b/style.css
@@ -1223,8 +1223,8 @@ a:hover h2{
 
   .index-main {
     padding: 0rem;
-    margin-left: 10rem;
-    margin-right: 10rem;
+    margin-left: auto;
+    margin-right: auto;
   }
 
 
