--- a/style.css
+++ b/style.css
@@ -118,7 +118,6 @@ table {
   a:link {
       color: #969696;
       text-decoration: none;
-      text-decoration: none;
     
       /* letter-spacing:   -1px; */
     }
@@ -239,6 +238,42 @@ table {
     line-height: 100%;
   }
 
+  .subtitle {
+  font-family: 'ppmori-semibold', sans-serif;
+  font-weight: 600;
+  margin-bottom: 10px;
+  
+}
+
+.blue-subtitle {
+  font-family: 'ppmori-semibold', sans-serif;
+  font-weight: 600;
+  color: #37ABFF;
+  margin-bottom: 10px;
+}
+
+.prototype-button {
+    display: inline-block;
+
+      border-radius: 5px;
+    background-color: #F0F0F0;
+    padding: 1rem 2rem;
+
+}
+
+
+/* Hover matches nav behavior */
+.prototype-button:hover {
+  background-color: #37ABFF;
+  color: #F0F0F0;
+}
+
+/* Active state */
+.prototype-button:active,
+.prototype-button.active {
+  color: #37ABFF;
+}
+
 
   h4 a:link, h4 a:visited {
     color: #37ABFF;
@@ -255,6 +290,11 @@ table {
   }
 
 
+
+video.border {
+  border: 2px solid #F0F0F0;
+  border-radius: 8px;
+}
 
 
   body {
@@ -463,6 +503,10 @@ main {
     position: relative;
     bottom: 2rem;
   }
+
+  .process {
+    margin-left: 4rem;
+  }
 /* base containers end */
 
 
@@ -498,6 +542,26 @@ img.project {
   border-radius: 5px;
 }
 
+img.project-half {
+  width: 50%;
+  height: auto;
+  display: block;
+  border-radius: 5px;
+}
+.media-row {
+  display: flex;
+  gap: 20px; /* space between video and image */
+  align-items: center; /* vertical centering */
+}
+
+.media-row video,
+.media-row img {
+  width: 50%;
+  height: auto;
+  border-radius: 5px;
+}
+
+
 img.emote {
   max-width: 10rem;
   height: auto;
@@ -507,6 +571,14 @@ img.emote {
 }
 div.image-gallery {
   max-width: 100%;
+}
+
+div.image-gallery-border {
+  max-width: 100%;
+  border-width: 2px;
+  border-style: solid;
+  border-color:#F0F0F0;
+  border-radius: 8px;
 }
 
 div.dion-walking {
@@ -639,7 +711,7 @@ div.welcome-box2 {
 div.project-container {
   display: flex;
   box-sizing: border-box;
-
+  /* margin: 0 11rem; */
 }
 
 div.project-box1 {
@@ -654,10 +726,11 @@ div.project-box2 {
 
 .quick-facts_outer-container {
   display: flex;
+  gap: 3rem; /* Adjust as needed for spacing */
 }
+
 .quick-facts_container {
-  flex: 1;
-  width: 50%;
+  /* Remove flex: 1 and width: 50% */
   text-align: left;
   /* border: 1px solid #000; */
 }
@@ -725,6 +798,15 @@ div.project-box2 {
 /* MOBILE ADJUSTMENTS START HERE: */
 @media screen and (max-width: 600px) {
 
+  .quick-facts_outer-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .quick-facts_container {
+    max-width: 100%;
+  }
 
   
 /* TYPE ADJUSTMENTS */
@@ -1143,8 +1225,8 @@ a:hover h2{
 
   .index-main {
     padding: 0rem;
-    margin-left: 0rem;
-    margin-right: 0rem;
+    /* margin-left: 0rem;
+    margin-right: 0rem; */
   }
 
   .intro {
@@ -1203,9 +1285,8 @@ a:hover h2{
   }
 
   .index-main {
-    padding: 0rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
+  padding-right: 10rem;
+    padding-left: 10rem;
   }
 
   .intro {
@@ -1222,7 +1303,7 @@ a:hover h2{
   }
 
   .index-main {
-    padding: 0rem;
+    padding: 0 10rem;
     margin-left: auto;
     margin-right: auto;
   }
@@ -1267,7 +1348,7 @@ a:hover h2{
   white-space: nowrap;
 }
 
-.nav-panel-button:hover {
+.nav-panel-button:hover{
   background-color: #F0F0F0;
   color: #37ABFF;
 }
@@ -1279,6 +1360,8 @@ a:hover h2{
 .nav-panel-button.active {
   color: #37ABFF;
 }
+
+
 
 /* Smooth scrolling for the entire page */
 html {
