--- a/style.css
+++ b/style.css
@@ -413,18 +413,16 @@ main {
   .nav-outer {
     width: 100%;
     background-color: white;
-    border-bottom: 2px solid #F0F0F0;
     position: fixed;
     z-index: 1;
     left: 0;
     right: 0;
-    padding: 0.8rem 0;
     transition: transform 0.3s ease-in-out;
   }
 
-  .nav-outer.nav-hidden {
+  /* .nav-outer.nav-hidden {
     transform: translateY(-100%);
-  }
+  } */
 
   .nav-inner {
     padding-left:11rem;
@@ -438,32 +436,35 @@ main {
   .nav-buttons {
     display: flex;
     align-items: center;
-    gap: .8rem;
+    justify-content: space-between;
+        border-bottom: 2px solid #F0F0F0;
+    padding: 0.5rem 0;
+
   }
 
   .nav-button {
     text-decoration: none;
     display: flex; 
     align-items: center;
-    padding-top: .6rem;
-    padding-bottom: .4rem;
+    padding-top: .4rem;
+    padding-bottom: .2rem;
     border-radius: 5px;
-    padding-left: .75rem;
-    padding-right: .75rem;
+    padding-left: .6rem;
+    padding-right: .6rem;
     background-color: #F0F0F0;
   }
 
-  .project-buttons {
+  .name {
     display: flex;
     align-items: center;
     gap: 2rem;
   }
 
-  .project-buttons a:hover {
+  .name a:hover {
     color: #37ABFF;
   }
 
-  .project-buttons a.active {
+  .name a.active {
     color: #37ABFF;
   }
   
@@ -473,9 +474,7 @@ main {
     display: flex;
     align-items: center;
     gap: .8rem;
-    padding-right: .8rem;
-    border-right: 1px solid #E0E0E0;
-    margin-right: .8rem;
+
   }
 
   .nav-button,
