--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ table {
   color: #888;
   font-family: 'DM Sans', sans-serif;
 }
-
+/* 
 .mockup-wrapper {
   background-color: #5CBBFF;
   display: flex;
@@ -110,7 +110,7 @@ table {
   width: 100%;
   height: calc(100% - 40px);
   object-fit: cover;
-}
+} */
 
 
 /* Start of type-specific styles */
@@ -371,8 +371,7 @@ main {
     max-width: 2000px;
     margin-left: auto;
     margin-right: auto;
-    padding-right: 10rem;
-    padding-left: 10rem;
+    padding: 0rem 1rem;
   }
 
 
@@ -426,9 +425,8 @@ main {
   } */
 
   .nav-inner {
-    padding-left:11rem;
-    padding-right:11rem;
-    max-width: calc(2000px - 2rem);
+    padding: 0 1.5rem;
+    max-width: calc(2024px - 2.5rem);
     margin-left: auto;
     margin-right: auto;
     
@@ -501,7 +499,6 @@ main {
 
   footer {
     position: relative;
-    bottom: 2rem;
   }
 
   .process {
@@ -513,7 +510,7 @@ main {
 /* Image/video containers */
 
 a.gallery-anchor {
-  padding: 1rem;
+  padding: .5rem;
   display: block;
   border-radius: 5px;
   text-decoration: none;
@@ -554,7 +551,7 @@ img.project-half {
 .media-row img {
   width: 50%;
   height: auto;
-  border-radius: 5px;
+  /* border-radius: 5px; */
 }
 
 
@@ -701,17 +698,39 @@ div.welcome-box2 {
 div.project-container {
   display: flex;
   box-sizing: border-box;
+
   /* margin: 0 11rem; */
 }
 
 div.project-box1 {
   flex: 2; 
-  max-width: 50%;
+  max-width: 33.3333%;
 }
 
 div.project-box2 {
   flex: 2; /* Each box will grow equally to fill available space */
-  max-width: 50%;
+  max-width: 33.3333%;
+}
+
+div.project-box3 {
+  flex: 2; /* Each box will grow equally to fill available space */
+  max-width: 33.3333%;
+}
+
+div.intro-container {
+ display: flex;
+  box-sizing: border-box;
+  gap: 1rem;
+  padding: .5rem;
+}
+
+div.intro-box1 {
+  flex: 2; 
+  max-width: 66.666666%;
+}
+div.intro-box2 {
+  flex: 2; /* Each box will grow equally to fill available space */
+  max-width: 33.33%;
 }
 
 .quick-facts_outer-container {
@@ -787,7 +806,12 @@ div.project-box2 {
 
 /* MOBILE ADJUSTMENTS START HERE: */
 @media screen and (max-width: 600px) {
-
+a.gallery-anchor {
+  padding: 1rem;
+  display: block;
+  border-radius: 5px;
+  text-decoration: none;
+}
   .quick-facts_outer-container {
     display: flex;
     flex-direction: column;
@@ -999,14 +1023,19 @@ div.project-box2 {
       box-sizing: border-box;
     }
 
-    div.project-box1 {
-      max-width: 100%;
-      margin-bottom: 1rem;
+        div.intro-container {
+      display: block;
+      box-sizing: border-box;
     }
 
-    div.project-box2 {
+
+    div.project-box1,
+    div.project-box2,
+    div.project-box3
+     {
       max-width: 100%;
     }
+
   
 
 /* BREAK ADJUSTMENTS */
@@ -1215,6 +1244,7 @@ a:hover h2{
 
   .index-main {
     padding: 0rem;
+    margin: 
     /* margin-left: 0rem;
     margin-right: 0rem; */
   }
@@ -1226,8 +1256,8 @@ a:hover h2{
   }
 
   .nav-inner {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   div.welcome-container {
@@ -1248,7 +1278,8 @@ a:hover h2{
   }
 
   div.project-box1,
-  div.project-box2 {
+  div.project-box2,
+  div.project-box3 {
     max-width: 100%;
   }
 
@@ -1263,42 +1294,24 @@ a:hover h2{
   }
 }
 
-/* Small desktop adjustments */
-@media screen and (max-width: 1024px) and (min-width: 769px) {
-  .nav-inner {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-  main {
-    padding-right: 11rem;
-    padding-left: 11rem;
-  }
-
-  .index-main {
-  padding-right: 10rem;
-    padding-left: 10rem;
-  }
-
-  .intro {
-    padding-right: 2rem;
-    padding-left: 2rem;
-  }
-}
 
 /* Large desktop adjustments */
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1500px) {
   main {
     padding-right: 11rem;
     padding-left: 11rem;
   }
 
   .index-main {
-    padding: 0 10rem;
-    margin-left: auto;
-    margin-right: auto;
+      width: 100%;
   }
 
+  
 
+    .nav-inner {
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
 }
 
 /* Fixed Navigation Panel */
