--- a/style.css
+++ b/style.css
@@ -795,6 +795,12 @@ div.intro-box2 {
     display: none; 
   }
 
+
+  .text-break {
+  display: block;
+  height: 0.75rem;
+}
+
 /* End of br's */
   
 
@@ -872,7 +878,7 @@ a.gallery-anchor {
   }
 
 
-  a:link {
+  /* a:link {
     color: #5CBBFF;
     text-decoration: none;
     -webkit-transition: none;
@@ -901,7 +907,7 @@ a.gallery-anchor {
   a.message:link {
     color: #5CBBFF;
     text-decoration: none;
-  }
+  } */
 
 
 
@@ -1007,7 +1013,7 @@ a.gallery-anchor {
     div.welcome-box1 {
       max-width: 100%;
       padding-right: 0;
-      height: auto;
+      height: auto;                 
       margin-bottom: 1rem;
     }
     div.welcome-box2 {
@@ -1018,15 +1024,15 @@ a.gallery-anchor {
       overflow-wrap: break-word;
     }
 
-    div.project-container {
-      display: block;
-      box-sizing: border-box;
-    }
 
         div.intro-container {
       display: block;
+      gap: 1rem; 
       box-sizing: border-box;
+      padding: 1rem;
     }
+
+
 
 
     div.project-box1,
@@ -1035,6 +1041,13 @@ a.gallery-anchor {
      {
       max-width: 100%;
     }
+
+    div.project-container {
+ display: block;
+  box-sizing: border-box;
+  gap: 1rem;
+  padding: 0;
+}
 
   
 
@@ -1194,7 +1207,7 @@ a.gallery-anchor {
     }
   
   
-  }
+
 
 .text-break {
   display: block;
@@ -1228,14 +1241,16 @@ hr {
   margin-bottom: 0;
   padding-bottom: 0;
   width: 100%;
+
+
 }
 
-a:hover h2{
-  color: #37ABFF;
 }
+
+
 
 /* Tablet adjustments */
-@media screen and (max-width: 768px) and (min-width: 601px) {
+@media screen and (max-width: 768px) (min-width: 601px) {
   main {
     padding: 1.5rem;
     margin-left: 1.5rem;
@@ -1249,6 +1264,22 @@ a:hover h2{
     margin-right: 0rem; */
   }
 
+
+div.intro-container {
+ display: block;
+  box-sizing: border-box;
+  gap: 1rem;
+  padding: 1.5rem;
+}
+
+div.project-container {
+ display: block;
+  box-sizing: border-box;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+
   .intro {
     padding: 1.5rem;
     margin-left: 1.5rem;
@@ -1256,8 +1287,8 @@ a:hover h2{
   }
 
   .nav-inner {
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
   div.welcome-container {
@@ -1271,11 +1302,7 @@ a:hover h2{
     max-width: 100%;
   }
 
-  div.project-container {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-  }
+
 
   div.project-box1,
   div.project-box2,
